# render_demo

./: .gitignore  Cargo.toml  README.md  demo.d  old.txt  vbo.txt
camera/: Cargo.toml
camera/src/: camera.rs  controls.rs  projection.rs
camera/src/controls/: first_person.rs  flat.rs  flying.rs  mod.rs  orbit.rs
demo/: Cargo.toml
demo/src/: error.rs  graphics.rs  gui.rs  main.rs
demo/src/gamestate/: data.rs  mod.rs
demo/src/graphics/: atlas.rs  camera.rs  color.rs  error.rs  font.rs  gpu_buffer.rs  instance.rs  layout.rs  maps.rs  mod.rs  pass.rs  renderer.rs  screen_layout.rs  sprites.rs  system.rs  systems.rs  textures.rs  time_uniform.rs  vertex.rs  vertex_buffer.rs  vertexbuffer.rs
demo/src/graphics/animations/: animation.rs  buffers.rs  mod.rs  pipeline.rs  renderer.rs  vertex.rs
demo/src/graphics/atlas/: allocation.rs  allocator.rs  atlas.rs  group.rs  handler.rs  layer.rs  mod.rs
demo/src/graphics/font/: colored_uniform.rs  pipeline.rs  render.rs  text.rs  vertex.rs
demo/src/graphics/maps/: buffers.rs  map.rs  mapgroup.rs  maplayout.rs  mod.rs  pipeline.rs  render.rs  texture.rs  vertex.rs
demo/src/graphics/shapes/: mod.rs  pipeline.rs  render.rs  shape.rs  vertex.rs
demo/src/graphics/sprites/: buffers.rs  mod.rs  pipeline.rs  render.rs  sprite.rs  spritebuffer.rs  vertex.rs
demo/src/graphics/systems/: gpu_buffer.rs  instance_buffer.rs  layout.rs  pass.rs  renderer.rs  system.rs  vbo.rs
demo/src/graphics/textures/: mod.rs  texture.rs  texturegroup.rs  texturelayout.rs
demo/src/gui/: callbacks.rs  renderer.rs  user_interface.rs  values.rs  widget.rs  widgets.rs
demo/src/gui/user_interface/: events.rs  internals.rs
demo/src/gui/widgets/: button.rs  events.rs  internals.rs  label.rs
demo/src/shaders/: animationshader.wgsl  mapshader.wgsl  shader.wgsl  shapeshader.wgsl  spriteshader.wgsl  textshader.wgsl
demo/src/ui/: test.rs
gpu_graphics/: Cargo.toml
gpu_graphics/src/: lib.rs  systems.rs
gpu_graphics/src/atlas/: allocation.rs
gpu_graphics/src/font/: text.rs
gpu_graphics/src/maps/: maplayout.rs  render.rs  vertex.rs
gpu_graphics/src/systems/: bounds.rs  device.rs  instance_buffer.rs  pass.rs  vbo.rs
gpu_graphics/src/textures/: texture.rs
gpu_graphics/src/ui/: pipeline.rs  render.rs  vertex.rs
graphics/: Cargo.toml
graphics/src/: atlas.rs  lib.rs  mesh.rs  shapes.rs  systems.rs  textures.rs  tilesheet.rs
graphics/src/atlas/: allocation.rs  atlas.rs  atlas_set.rs  group.rs  handler.rs  layer.rs
graphics/src/font/: pipeline.rs  render.rs  text.rs  vertex.rs
graphics/src/images/: image.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/lights/: lights.rs  pipeline.rs  render.rs  uniforms.rs  vertex.rs
graphics/src/maps/: map.rs  maplayout.rs  pipeline.rs  render.rs  texture.rs  vertex.rs
graphics/src/mesh/: meshs.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/mesh2d/: meshs.rs  pipeline.rs  render.rs  vertex.rs
graphics/src/shaders/: 2dmeshshader.wgsl  guishader.wgsl  imageshader.wgsl  lightshader.wgsl  mapshader.wgsl  meshshader.wgsl  rectangle_shader.wgsl  shapeshader.wgsl  spriteshader.wgsl  textshader.wgsl
graphics/src/shapes/: pipeline.rs  rectangle.rs  render.rs  shape.rs  vertex.rs
graphics/src/sprites/: pipeline.rs  render.rs  sprite.rs  vertex.rs
graphics/src/systems/: buffer.rs  device.rs  draw_order.rs  instance_buffer.rs  layout.rs  pass.rs  renderer.rs  static_vbo.rs  system.rs  vbo.rs
graphics/src/textures/: texture.rs  texturegroup.rs  texturelayout.rs
graphics/src/ui/: pipeline.rs  rectangle.rs  render.rs  vertex.rs
input/: Cargo.toml
input/src/: axis.rs  bindings.rs  frame_time.rs  handler.rs
src/: main.rs
src/gamestate/: data.rs
