[package]
name = "demo"
version = "0.1.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
mint = "0.5.9"
thiserror = "1.0.48"
winit = { version = "0.29.10", features = ["serde", "rwh_05"] }
image = "0.24.7"
tokio = { version = "1.32.0", features = ["full"] }
guillotiere = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
backtrace = "0.3.69"
futures = "0.3.28"
chrono = { version = "0.4.30", disable-defaults = true, features = ["clock", "serde", "std"] }
ubits = "0.3.1"
hecs = "0.10.3"
glam = { version = "0.24.1", features = ["bytemuck", "mint"] }

[dependencies.camera]
git = "https://github.com/AscendingCreations/AscendingLibraries"
rev = "f2324c1"
package = "ascending_camera"
version = "0.1.0"

[dependencies.input]
git = "https://github.com/AscendingCreations/AscendingLibraries"
rev = "f2324c1"
package = "ascending_input"
version = "0.1.0"

[dependencies.graphics]
git = "https://github.com/AscendingCreations/AscendingLibraries"
rev = "f2324c1"
package = "ascending_graphics"
version = "0.1.0"
