[package]
name = "demo"
version = "0.2.0"
authors = ["S.J.R. van Schaik", "Andrew Wheeler <genusistimelord@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
winit = { version = "0.30.0", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
backtrace = "0.3.69"
hecs = "0.10.4"
futures = "0.3"

[dependencies.camera]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#rev = "f2324c1"
#path = "../AscendingLibraries/camera"
package = "ascending_camera"
version = "0.4.0"

[dependencies.input]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#rev = "f2324c1"
#path = "../AscendingLibraries/input"
package = "ascending_input"
version = "0.3.0"

[dependencies.graphics]
git = "https://github.com/AscendingCreations/AscendingLibraries"
#rev = "f2324c1"
#path = "../AscendingLibraries/graphics"
package = "ascending_graphics"
version = "0.12.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
strip = "none"
lto = false
incremental = true
panic = 'unwind'
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false