[package]
name = "camera"
version = "0.1.0"
authors = ["S.J.R. van Schaik <stephan@synkhronix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5"
ultraviolet = { version = "0.8", features = ["mint"] }
