[package]
name = "demo"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytemuck = { version = "1.9", features = ["derive"] }
crevice = "0.10"
crevice-derive = "0.10"
mint = "0.5"
thiserror = "1.0"
ultraviolet = { version = "0.9", features = ["mint"] }
winit = { version = "0.26", features = ["serde"] }
image = "0.24"
tokio = { version = "1.19", features = ["full"] }
bitflags = "1.3"
guillotiere = "0.6"
serde = "1.0"
camera = { path = "../camera" }
input = { path = "../input" }
log = "0.4.17"
backtrace = "0.3"
once_cell = "1.12.0"
futures = "0.3.21"

[dependencies.naga]
#git = "https://github.com/gfx-rs/naga"
#rev = "1aa91549"
version = "0.9.0"
features = ["span", "validate", "wgsl-in"]

[dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "36f8d83"
version = "0.13.0"
