[package]
name = "demo"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytemuck = { version = "1.12.1", features = ["derive"] }
crevice = "0.11.0"
crevice-derive = "0.10.0"
mint = "0.5.9"
thiserror = "1.0.35"
ultraviolet = { version = "0.9.0", features = ["mint"] }
winit = { version = "0.27.3", features = ["serde"] }
image = "0.24.3"
tokio = { version = "1.21.1", features = ["full"] }
bitflags = "1.3.2"
guillotiere = "0.6.2"
serde = "1.0.144"
camera = { path = "../camera" }
input = { path = "../input" }
log = "0.4.17"
backtrace = "0.3.66"
once_cell = "1.14.0"
futures = "0.3.24"

[dependencies.naga]
#git = "https://github.com/gfx-rs/naga"
#rev = "1aa91549"
version = "0.9.0"
features = ["span", "validate", "wgsl-in"]

[dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "36f8d83"
version = "0.13.1"
