[package]
name = "demo"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bytemuck.workspace = true
crevice.workspace = true
crevice-derive.workspace = true
mint.workspace = true
thiserror.workspace = true
ultraviolet.workspace = true
winit.workspace = true
image.workspace = true
tokio.workspace = true
bitflags.workspace = true
guillotiere.workspace = true
serde.workspace = true
camera.workspace = true
input.workspace = true
log.workspace = true
backtrace.workspace = true
once_cell.workspace = true
futures.workspace = true
cosmic-text.workspace = true
fontdue.workspace = true
naga.workspace = true
wgpu.workspace = true

