[package]
name = "input"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "3.1.0", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
winit = { version = "0.27.3", features = ["serde"] }
